--- a/app.json
+++ b/app.json
@@ -2,5 +2,5 @@
   "name": "Start on Heroku: Node.js",
   "description": "A barebones Node.js app using Express 4",
   "repository": "https://github.com/heroku/node-js-getting-started",
-  "keywords": ["node", "express", "heroku"],
+  "keywords": ["node", "express", "heroku"]
 }
